ecmascript/parser/tests/test262-error-references/fail/6aeff33ceda72475.js.stderr
error: Unexpected token `yield`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/test262-parser/fail/6aeff33ceda72475.js:1:17
  |
1 | class A extends yield B { }
  |                 ^^^^^

